--- a/css/sinks.css
+++ b/css/sinks.css
@@ -38,6 +38,10 @@ a {
   padding: 0.5rem 2rem !important;
 }
 
+.navbar-link-logo img {
+  width: 100% !important;
+}
+
 .navbar-link .navbar-anchor,
 .navbar-anchor {
   font-family: var(--font-family) !important;
@@ -61,9 +65,9 @@ a.nav-link.navbar-anchor.active {
 .dropdown-content {
   display: none;
   position: absolute;
-  background-color: #FFFFFF;
+  background-color: #ffffff;
   min-width: 160px;
-  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
   z-index: 1;
   border-bottom-right-radius: 5px;
   border-bottom-left-radius: 5px;
@@ -77,11 +81,10 @@ a.nav-link.navbar-anchor.active {
   display: block;
   text-align: left;
   transition: 0.3s ease-in-out;
-  font-family: "Roboto",sans-serif;
+  font-family: "Roboto", sans-serif;
   font-weight: 300;
   font-size: 15px;
 }
-
 
 .dropdown-content a:hover {
   background-color: #ddd;
@@ -107,7 +110,8 @@ a.navbar-brand {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  margin-top: 5rem;
+  margin-bottom: 5rem;
+  margin-left: 5.5rem;
 }
 
 .carousel-item-title {
@@ -127,10 +131,9 @@ a.navbar-brand {
 }
 
 .carousel-item img {
-  /* width: 22%; */
   margin: 0 auto;
-  width: 20vw;
-  height: 65vh;
+  width: 23%;
+  height: 65%;
   margin: 0 auto;
 }
 
@@ -140,10 +143,6 @@ a.navbar-brand {
   margin-right: 20px;
   font-size: 29.985px;
   text-transform: uppercase;
-}
-
-.carousel-indicators {
-  bottom: 22.5% !important;
 }
 
 .carousel-control-prev,
@@ -170,7 +169,7 @@ a.navbar-brand {
   width: 10px !important;
   height: 10px !important;
   border-radius: 50%;
-  background: gold !important;
+  background: #dfdfdf !important;
   box-sizing: border-box !important;
   border: none !important;
 }
@@ -234,15 +233,10 @@ a.navbar-brand {
     margin-right: 0px;
   }
 
-  .navbar-link-logo img {
-    width: 100% !important;
-  }
-
-  .dropdown-content{
+  .dropdown-content {
     left: 50%;
     transform: translateX(-50%);
     min-width: 50%;
-    
   }
 
   .dropdown-content a {
@@ -268,23 +262,17 @@ a.navbar-brand {
   }
 
   .carousel-item img {
-    height: 55vh;
-    width: 35vw;
-  }
-  .carousel-indicators {
-    width: fit-content;
-    margin-left: 0 !important;
-    bottom: 30% !important;
-    left: 36.5%;
-  }
-
-  .carousel-control-next,
-  .carousel-control-prev {
-    bottom: 25% !important;
+    height: 25%;
+    width: 25%;
   }
 
   .carousel-item-text {
-    margin-top: 8rem !important;
+    margin-left: 1.6rem;
+  }
+
+  .carousel-control-prev,
+  .carousel-control-next {
+    height: 100vh;
   }
 }
 
@@ -309,7 +297,7 @@ a.navbar-brand {
     width: 100% !important;
   }
 
-  .dropdown-content{
+  .dropdown-content {
     left: 50%;
     transform: translateX(-50%);
     min-width: 50%;
@@ -333,31 +321,17 @@ a.navbar-brand {
     top: 15px;
   }
 
-  .carousel-item {
-    margin-top: 10rem;
+  .carousel-item-text {
+    margin-left: 1.6rem;
   }
 
   .carousel-item img {
     height: 35vh;
     width: 50vw;
   }
-  .carousel-indicators {
-    bottom: 36% !important;
-    margin-right: 0px !important;
-    margin-left: 0% !important;
-    width: fit-content;
-    left: 23%;
-    /* width: 10px;
-      height: 10px;
-      margin: 0% auto; */
-  }
 
-  .carousel-control-next,
-  .carousel-control-prev {
-    bottom: 10% !important;
-  }
-
-  .carousel-item-text {
-    margin-top: 12rem !important;
+  .carousel-control-prev,
+  .carousel-control-next {
+    height: 82vh;
   }
 }
