--- a/css/about-us.css
+++ b/css/about-us.css
@@ -38,6 +38,10 @@ a {
   z-index: 100;
 }
 
+.navbar-link-logo img {
+  width: 100% !important;
+}
+
 .navbar-link .navbar-anchor,
 .navbar-anchor {
   font-family: var(--font-family) !important;
@@ -61,9 +65,9 @@ a.nav-link.navbar-anchor.active {
 .dropdown-content {
   display: none;
   position: absolute;
-  background-color: #FFFFFF;
+  background-color: #ffffff;
   min-width: 160px;
-  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
   z-index: 1;
   border-bottom-right-radius: 5px;
   border-bottom-left-radius: 5px;
@@ -77,11 +81,10 @@ a.nav-link.navbar-anchor.active {
   display: block;
   text-align: left;
   transition: 0.3s ease-in-out;
-  font-family: "Roboto",sans-serif;
+  font-family: "Roboto", sans-serif;
   font-weight: 300;
   font-size: 15px;
 }
-
 
 .dropdown-content a:hover {
   background-color: #ddd;
@@ -99,15 +102,17 @@ a.navbar-brand {
 /* About Us Image and Text start */
 .about-us {
   display: flex;
+  height: 100vh;
+  flex-wrap: wrap;
 }
 
 .about-us-left-half {
-  width: 50vw;
-  height: 150vh;
+  width: 50%;
+  height: 100%;
 }
 
 .about-us-right-half {
-  /* width: 50vw; */
+  width: 50%;
   margin-top: 2rem;
 }
 
@@ -116,12 +121,13 @@ a.navbar-brand {
   display: flex;
   flex-direction: column;
   align-items: center;
+  height: 100vh;
 }
 
 .about-us-bg-image {
   background-image: url("../images/about-us-background-image.jpeg");
   width: 100%;
-  height: 150vh;
+  height: 100% !important;
   position: relative;
 }
 .about-us-caption {
@@ -136,13 +142,6 @@ a.navbar-brand {
   text-transform: uppercase;
   font-size: 119.895px !important;
   font-family: "Roboto", sans-serif !important;
-}
-
-.about-us-right-half-caption {
-  position: relative;
-  top: 40%;
-  transform: translateY(-50%);
-  padding: 72px;
 }
 
 .about-us-right-half-caption h2 {
@@ -160,7 +159,7 @@ a.navbar-brand {
   letter-spacing: 0.7px;
 }
 
-.icon-holder{
+.icon-holder {
   width: 30px;
   height: 30px;
 }
@@ -181,105 +180,8 @@ a.navbar-brand {
     box-shadow: none !important;
     margin-right: 0px;
   }
-  .navbar-link-logo img {
-    width: 100% !important;
-  }
 
-  .dropdown-content{
-    left: 50%;
-    transform: translateX(-50%);
-    min-width: 50%;
-    
-  }
-
-  .dropdown-content a {
-    text-align: center;
-  }
-
-  .width-10 {
-    width: 10%;
-  }
-
-  .width-70 {
-    width: 40%;
-  }
-
-  .language-button {
-    position: sticky;
-    right: 2rem;
-    top: 15px;
-  }
-
-  .about-us {
-    flex-direction: column;
-    flex-wrap: wrap;
-  }
-
-  .about-us-left-half {
-    width: 100%;
-    height: 100vh;
-  }
-
-  .about-us-bg-image{
-    height: 100vh;
-  }
-
-  /* .about-us-bg-image {
-    height: 50vh;
-  } */
-
-  .about-us-caption p {
-    font-size: 37.32px !important;
-  }
-
-  .about-us-right-half {
-    /* width: 90%;
-    margin: 0 auto; */
-    height: 0px !important;
-    margin-top: 32rem;
-    align-items: flex-start;
-    margin-left: 6rem;
-  }
-
-  .about-us-right-half-caption {
-    position: static;
-    padding: 0px !important;
-    display: block;
-  }
-
-
-  .about-us-right-half-caption h2 {
-    font-size: 21.6px;
-    font-weight: 400;
-    width: 90%;
-    margin-bottom: 2rem;
-  }
-
-  .about-us-right-half-caption p {
-    width: 90%;
-    font-size: 15px;
-    font-weight: 300;
-    line-height: 24px;
-  }
-}
-
-@media screen and (min-width: 320px) and (max-width: 767px) {
-  .navbar-toggler {
-    border: none;
-    font-family: var(--font-family) !important;
-    text-transform: uppercase;
-    font-size: 15px;
-    font-weight: 300;
-    margin: auto;
-    color: var(--black-color) !important;
-    box-shadow: none !important;
-    margin-right: 0px;
-  }
-  .navbar-link-logo img {
-    width: 100% !important;
-  }
-
-  .dropdown-content{
+  .dropdown-content {
     left: 50%;
     transform: translateX(-50%);
     min-width: 50%;
@@ -314,7 +216,101 @@ a.navbar-brand {
   }
 
   .about-us-bg-image {
+    height: 100vh;
+  }
+
+  /* .about-us-bg-image {
     height: 50vh;
+  } */
+
+  .about-us-caption p {
+    font-size: 37.32px !important;
+  }
+
+  .about-us-right-half {
+    /* width: 90%;
+    margin: 0 auto; */
+    height: 0px !important;
+    margin-top: 32rem;
+    align-items: flex-start;
+    margin-left: 6rem;
+  }
+
+  .about-us-right-half-caption {
+    position: static;
+    padding: 0px !important;
+    display: block;
+  }
+
+  .about-us-right-half-caption h2 {
+    font-size: 21.6px;
+    font-weight: 400;
+    width: 90%;
+    margin-bottom: 2rem;
+  }
+
+  .about-us-right-half-caption p {
+    width: 90%;
+    font-size: 15px;
+    font-weight: 300;
+    line-height: 24px;
+  }
+}
+
+@media screen and (min-width: 320px) and (max-width: 767px) {
+  .navbar-toggler {
+    border: none;
+    font-family: var(--font-family) !important;
+    text-transform: uppercase;
+    font-size: 15px;
+    font-weight: 300;
+    margin: auto;
+    color: var(--black-color) !important;
+    box-shadow: none !important;
+    margin-right: 0px;
+  }
+  .navbar-link-logo img {
+    width: 100% !important;
+  }
+
+  .dropdown-content {
+    left: 50%;
+    transform: translateX(-50%);
+    min-width: 50%;
+  }
+
+  .dropdown-content a {
+    text-align: center;
+  }
+
+  .width-10 {
+    width: 10%;
+  }
+
+  .width-70 {
+    width: 40%;
+  }
+
+  .language-button {
+    position: sticky;
+    right: 2rem;
+    top: 15px;
+  }
+
+  .about-us {
+    flex-direction: column;
+    flex-wrap: wrap;
+  }
+
+  .about-us-left-half {
+    width: 100%;
+    height: 50%;
+  }
+
+  .about-us-bg-image {
+    height: 100%;
+    background-size: cover;
+    background-repeat: no-repeat;
   }
 
   .about-us-caption p {
@@ -328,16 +324,9 @@ a.navbar-brand {
   .about-us-right-half {
     width: 90%;
     margin: 0 auto;
-    /* height: 50vh;
-    margin-top: 4rem; */
-    /* height: 500px; */
+
     height: 0px;
     align-items: flex-start;
-    margin-left: 3rem;
-    margin-top: 8rem;
-    /* margin-top: 8rem; */
-    /* position: absolute;
-    top: 100%; */
   }
 
   .about-us-right-half-caption {
