--- a/css/tables.css
+++ b/css/tables.css
@@ -36,6 +36,10 @@ a {
   padding: 0.5rem 2rem !important;
 }
 
+.navbar-link-logo img {
+  width: 100% !important;
+}
+
 .navbar-link .navbar-anchor,
 .navbar-anchor {
   font-family: var(--font-family) !important;
@@ -56,9 +60,9 @@ a.nav-link.navbar-anchor.active {
 .dropdown-content {
   display: none;
   position: absolute;
-  background-color: #FFFFFF;
+  background-color: #ffffff;
   min-width: 160px;
-  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
   z-index: 1;
   border-bottom-right-radius: 5px;
   border-bottom-left-radius: 5px;
@@ -72,11 +76,10 @@ a.nav-link.navbar-anchor.active {
   display: block;
   text-align: left;
   transition: 0.3s ease-in-out;
-  font-family: "Roboto",sans-serif;
+  font-family: "Roboto", sans-serif;
   font-weight: 300;
   font-size: 15px;
 }
-
 
 .dropdown-content a:hover {
   background-color: #ddd;
@@ -102,7 +105,8 @@ a.navbar-brand {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  margin-top: 5rem;
+  margin-bottom: 5rem;
+  margin-left: 4.5rem;
 }
 
 .carousel-item-title {
@@ -123,10 +127,8 @@ a.navbar-brand {
 
 .carousel-item img {
   margin: 0 auto;
-  /* width: 60vw; */
-  width: 25vw;
-  height: 65vh;
-  margin: 0 auto;
+  width: 23%;
+  height: 65%;
 }
 
 .carousel-item .caption {
@@ -135,10 +137,6 @@ a.navbar-brand {
   margin-right: 20px;
   font-size: 29.985px;
   text-transform: uppercase;
-}
-
-.carousel-indicators {
-  bottom: 22.5% !important;
 }
 
 .carousel-control-prev,
@@ -165,7 +163,7 @@ a.navbar-brand {
   width: 10px !important;
   height: 10px !important;
   border-radius: 50%;
-  background: gold !important;
+  background: rgb(224, 223, 223) !important;
   box-sizing: border-box !important;
   border: none !important;
 }
@@ -224,15 +222,10 @@ a.navbar-brand {
     margin-right: 0px;
   }
 
-  .navbar-link-logo img {
-    width: 100% !important;
-  }
-
-  .dropdown-content{
+  .dropdown-content {
     left: 50%;
     transform: translateX(-50%);
     min-width: 50%;
-    
   }
 
   .dropdown-content a {
@@ -258,19 +251,17 @@ a.navbar-brand {
   }
 
   .carousel-item img {
-    height: 55vh;
-  }
-  .carousel-indicators {
-    bottom: 30% !important;
-  }
-
-  .carousel-control-next,
-  .carousel-control-prev {
-    bottom: 25% !important;
+    height: 25%;
+    width: 25%;
   }
 
   .carousel-item-text {
-    margin-top: 8rem !important;
+    margin-left: 2.5rem;
+  }
+
+  .carousel-control-prev,
+  .carousel-control-next {
+    height: 100vh;
   }
 }
 
@@ -292,7 +283,7 @@ a.navbar-brand {
     width: 100% !important;
   }
 
-  .dropdown-content{
+  .dropdown-content {
     left: 50%;
     transform: translateX(-50%);
     min-width: 50%;
@@ -315,23 +306,13 @@ a.navbar-brand {
     top: 15px;
   }
 
-  .carousel-item {
-    margin-top: 10rem;
-  }
-
   .carousel-item img {
     height: 35vh;
-  }
-  .carousel-indicators {
-    bottom: 37% !important;
+    width: 50vw;
   }
 
-  .carousel-control-next,
-  .carousel-control-prev {
-    bottom: 10% !important;
-  }
-
-  .carousel-item-text {
-    margin-top: 12rem !important;
+  .carousel-control-prev,
+  .carousel-control-next {
+    height: 82vh;
   }
 }
