--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,9 @@
-@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&family=Roboto:wght@100;300;400;500;700;900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Raleway:wght@100;200;300;400;500;600;700;800;900&display=swap");
 
 /* General Styling Start */
 :root {
   --black-color: #1a1a1a;
-  --font-family: "Roboto", sans-serif;
+  --font-family: "Raleway", sans-serif;
   --white-color: #fff;
 }
 
@@ -145,7 +145,7 @@ a.nav-link.navbar-anchor.active {
 .geometrical-left-side h2,
 .natural-left-side h2 {
   text-align: right;
-  font-family: "Poppins", sans-serif !important;
+  font-family: "Raleway", sans-serif !important;
   font-weight: 600;
   font-size: 60px;
   color: var(--black-color);
@@ -181,7 +181,7 @@ a.nav-link.navbar-anchor.active {
 .jewels-right-side h2,
 .oriental-right-side h2 {
   text-align: right;
-  font-family: "Poppins", sans-serif !important;
+  font-family: "Raleway", sans-serif !important;
   font-weight: 600;
   font-size: 60px;
   color: var(--black-color);
