--- a/css/about-us.css
+++ b/css/about-us.css
@@ -1,9 +1,9 @@
-@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&family=Roboto:wght@100;300;400;500;700;900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Raleway:wght@100;200;300;400;500;600;700;800;900&display=swap");
 
 /* General Styling Start */
 :root {
   --black-color: #1a1a1a;
-  --font-family: "Roboto", sans-serif;
+  --font-family: "Raleway", sans-serif;
   --white-color: #fff;
 }
 
@@ -81,7 +81,7 @@ a.nav-link.navbar-anchor.active {
   display: block;
   text-align: left;
   transition: 0.3s ease-in-out;
-  font-family: "Roboto", sans-serif;
+  font-family: "Raleway", sans-serif;
   font-weight: 300;
   font-size: 15px;
 }
@@ -102,13 +102,23 @@ a.navbar-brand {
 /* About Us Image and Text start */
 .about-us {
   display: flex;
-  height: 100vh;
   flex-wrap: wrap;
+}
+
+.about-us-bg-overlay {
+  height: 100%;
+  background-image: linear-gradient(
+    -180deg,
+    rgba(251, 251, 255, 1) 0%,
+    rgba(181, 203, 253, 1) 100%
+  );
+  width: 100%;
+  opacity: 50%;
 }
 
 .about-us-left-half {
   width: 50%;
-  height: 100%;
+  height: 200vh !important;
 }
 
 .about-us-right-half {
@@ -126,8 +136,10 @@ a.navbar-brand {
 
 .about-us-bg-image {
   background-image: url("../images/about-us-background-image.jpeg");
+  background-repeat: no-repeat;
   width: 100%;
-  height: 100% !important;
+  /* height: 200vh; */
+  height: 150vh;
   position: relative;
 }
 .about-us-caption {
@@ -135,25 +147,26 @@ a.navbar-brand {
   bottom: 5%;
   left: 9%;
   color: var(--white-color) !important;
+  z-index: 10;
 }
 
 .about-us-caption p {
   font-weight: 600 !important;
   text-transform: uppercase;
   font-size: 119.895px !important;
-  font-family: "Roboto", sans-serif !important;
+  font-family: "Raleway", sans-serif !important;
 }
 
 .about-us-right-half-caption h2 {
   font-weight: 500 !important;
-  font-family: "Poppins", sans-serif !important;
+  font-family: "Raleway", sans-serif !important;
   margin-bottom: 1rem;
   line-height: 40px;
   letter-spacing: 0.5px;
 }
 
 .about-us-right-half-caption p {
-  font-family: "Poppins", sans-serif !important;
+  font-family: "Raleway", sans-serif !important;
   margin-bottom: 1rem;
   line-height: 25px;
   letter-spacing: 0.7px;
@@ -212,28 +225,15 @@ a.navbar-brand {
 
   .about-us-left-half {
     width: 100%;
-    height: 100vh;
+    height: 80vh !important;
   }
 
   .about-us-bg-image {
-    height: 100vh;
+    height: 80vh !important;
   }
-
-  /* .about-us-bg-image {
-    height: 50vh;
-  } */
 
   .about-us-caption p {
     font-size: 37.32px !important;
-  }
-
-  .about-us-right-half {
-    /* width: 90%;
-    margin: 0 auto; */
-    height: 0px !important;
-    margin-top: 32rem;
-    align-items: flex-start;
-    margin-left: 6rem;
   }
 
   .about-us-right-half-caption {
@@ -304,11 +304,11 @@ a.navbar-brand {
 
   .about-us-left-half {
     width: 100%;
-    height: 50%;
+    height: 50vh !important;
   }
 
   .about-us-bg-image {
-    height: 100%;
+    height: 50vh;
     background-size: cover;
     background-repeat: no-repeat;
   }
