--- a/css/about-us.css
+++ b/css/about-us.css
@@ -100,10 +100,6 @@ a.navbar-brand {
 }
 /* Navbar End */
 /* About Us Image and Text start */
-.about-us {
-  display: flex;
-  flex-wrap: wrap;
-}
 
 .about-us-bg-overlay {
   height: 100%;
@@ -113,48 +109,30 @@ a.navbar-brand {
     rgba(181, 203, 253, 1) 100%
   );
   width: 100%;
-  opacity: 50%;
-}
 
-.about-us-left-half {
-  width: 50%;
-  height: 200vh !important;
-}
-
-.about-us-right-half {
-  width: 50%;
-  margin-top: 2rem;
-}
-
-.about-us-right-half {
-  /* position: relative; */
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  height: 100vh;
+  opacity: 70%;
 }
 
 .about-us-bg-image {
   background-image: url("../images/about-us-background-image.jpeg");
   background-repeat: no-repeat;
   width: 100%;
-  /* height: 200vh; */
-  height: 150vh;
+  height: 120vh;
   position: relative;
+  background-size: cover;
 }
 .about-us-caption {
-  position: absolute;
-  bottom: 5%;
-  left: 9%;
   color: var(--white-color) !important;
-  z-index: 10;
+  z-index: 11;
 }
 
 .about-us-caption p {
   font-weight: 600 !important;
   text-transform: uppercase;
-  font-size: 119.895px !important;
+  font-size: 60px !important;
+  line-height: 67px !important;
   font-family: "Raleway", sans-serif !important;
+  width: 95% !important;
 }
 
 .about-us-right-half-caption h2 {
@@ -163,13 +141,20 @@ a.navbar-brand {
   margin-bottom: 1rem;
   line-height: 40px;
   letter-spacing: 0.5px;
+  color: black;
+  padding-top: 20px;
 }
 
 .about-us-right-half-caption p {
   font-family: "Raleway", sans-serif !important;
   margin-bottom: 1rem;
-  line-height: 25px;
   letter-spacing: 0.7px;
+  line-height: 1 !important;
+  color: black;
+  font-size: 3rem !important;
+  font-weight: 300 !important;
+  line-height: 50px !important;
+  /* background: red; */
 }
 
 .icon-holder {
@@ -218,22 +203,9 @@ a.navbar-brand {
     top: 15px;
   }
 
-  .about-us {
-    flex-direction: column;
-    flex-wrap: wrap;
-  }
-
-  .about-us-left-half {
-    width: 100%;
-    height: 80vh !important;
-  }
-
-  .about-us-bg-image {
-    height: 80vh !important;
-  }
-
   .about-us-caption p {
     font-size: 37.32px !important;
+    width: 97% !important;
   }
 
   .about-us-right-half-caption {
@@ -249,11 +221,15 @@ a.navbar-brand {
     margin-bottom: 2rem;
   }
 
+  .about-us-caption p {
+    font-size: 37.32px !important;
+    width: 97% !important;
+  }
+
   .about-us-right-half-caption p {
-    width: 90%;
-    font-size: 15px;
-    font-weight: 300;
-    line-height: 24px;
+    font-size: 30px !important;
+    font-weight: 300 !important;
+    line-height: 35px !important;
   }
 }
 
@@ -297,56 +273,21 @@ a.navbar-brand {
     top: 15px;
   }
 
-  .about-us {
-    flex-direction: column;
-    flex-wrap: wrap;
-  }
-
-  .about-us-left-half {
-    width: 100%;
-    height: 50vh !important;
-  }
-
   .about-us-bg-image {
-    height: 50vh;
+    height: 100dvh;
+    background-position: 50% 90%;
     background-size: cover;
     background-repeat: no-repeat;
   }
 
   .about-us-caption p {
     font-size: 37.32px !important;
-  }
-
-  .about-us-left-half {
-    /* height: fit-content; */
-  }
-
-  .about-us-right-half {
-    width: 90%;
-    margin: 0 auto;
-
-    height: 0px;
-    align-items: flex-start;
-  }
-
-  .about-us-right-half-caption {
-    padding: 0px !important;
-    /* margin-top: 15rem; */
-    margin-bottom: 0rem !important;
-  }
-
-  .about-us-right-half-caption h2 {
-    font-size: 21.6px;
-    font-weight: 400;
-    line-height: 25.92px;
-    width: 80%;
-    /* margin-top: 2rem; */
+    width: 97% !important;
   }
 
   .about-us-right-half-caption p {
-    font-size: 15px;
-    font-weight: 300;
-    line-height: 24px;
-    width: 83%;
+    font-size: 15px !important;
+    font-weight: 300 !important;
+    line-height: 25px !important;
   }
 }
