--- a/css/projects.css
+++ b/css/projects.css
@@ -105,10 +105,9 @@ a.navbar-brand {
 
 .carousel-item-text {
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
   align-items: center;
   margin-bottom: 5rem;
-  margin-left: 3rem;
 }
 
 .carousel-item-title {
@@ -160,6 +159,11 @@ a.navbar-brand {
 .carousel-control-prev-icon svg,
 .carousel-control-next-icon svg {
   color: black !important;
+}
+
+.carousel-indicators {
+  margin-bottom: 0rem !important;
+  bottom: -5%;
 }
 
 .carousel-indicators button {
@@ -254,17 +258,13 @@ a.navbar-brand {
     top: 15px;
   }
 
-  .carousel-item {
-    margin-top: 5rem;
-  }
-
   .carousel-item img {
-    height: 25%;
-    width: 25%;
+    height: 60vh;
+    width: 50vw;
   }
 
   .carousel-item-text {
-    margin-left: 1.6rem;
+    text-align: center;
   }
 
   .carousel-control-prev,
@@ -319,16 +319,16 @@ a.navbar-brand {
   }
 
   .carousel-item-text {
-    margin-left: 1.6rem;
+    text-align: center;
   }
 
   .carousel-item img {
-    height: 35vh;
-    width: 50vw;
+    height: 60vh;
+    width: 75vw;
   }
 
   .carousel-control-prev,
   .carousel-control-next {
-    height: 82vh;
+    height: 100vh;
   }
 }
