--- a/css/tables.css
+++ b/css/tables.css
@@ -103,14 +103,9 @@ a.navbar-brand {
 
 .carousel-item-text {
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
   align-items: center;
   margin-bottom: 5rem;
-  margin-left: 4.5rem;
-}
-
-.carousel-item-title {
-  margin-left: 20px;
 }
 
 .carousel-item-title h2 {
@@ -126,9 +121,9 @@ a.navbar-brand {
 }
 
 .carousel-item img {
+  height: 60vh;
+  width: 35vw;
   margin: 0 auto;
-  width: 23%;
-  height: 65%;
 }
 
 .carousel-item .caption {
@@ -157,6 +152,11 @@ a.navbar-brand {
 .carousel-control-prev-icon svg,
 .carousel-control-next-icon svg {
   color: black !important;
+}
+
+.carousel-indicators {
+  margin-bottom: 0rem !important;
+  bottom: -5%;
 }
 
 .carousel-indicators button {
@@ -251,17 +251,17 @@ a.navbar-brand {
   }
 
   .carousel-item img {
-    height: 25%;
-    width: 25%;
+    height: 60vh;
+    width: 50vw;
   }
 
   .carousel-item-text {
-    margin-left: 2.5rem;
+    text-align: center;
   }
 
   .carousel-control-prev,
   .carousel-control-next {
-    height: 100vh;
+    height: 100vh !important;
   }
 }
 
@@ -306,13 +306,17 @@ a.navbar-brand {
     top: 15px;
   }
 
+  .carousel-item-text {
+    text-align: center;
+  }
+
   .carousel-item img {
-    height: 35vh;
-    width: 50vw;
+    height: 60vh;
+    width: 75vw;
   }
 
   .carousel-control-prev,
   .carousel-control-next {
-    height: 82vh;
+    height: 100vh;
   }
 }
