--- a/css/wall-features.css
+++ b/css/wall-features.css
@@ -106,14 +106,13 @@ a.navbar-brand {
 
 .carousel-item-text {
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
   align-items: center;
   margin-bottom: 5rem;
-  margin-left: 5.5rem;
 }
 
 .carousel-item-title {
-  margin-left: 20px;
+  /* margin-left: 20px; */
 }
 
 .carousel-item-title h2 {
@@ -129,9 +128,8 @@ a.navbar-brand {
 }
 
 .carousel-item img {
-  margin: 0 auto;
-  width: 26%;
-  height: 65%;
+  height: 60vh;
+  width: 35vw;
   margin: 0 auto;
 }
 
@@ -161,6 +159,11 @@ a.navbar-brand {
 .carousel-control-prev-icon svg,
 .carousel-control-next-icon svg {
   color: black !important;
+}
+
+.carousel-indicators {
+  margin-bottom: 0rem !important;
+  bottom: -5%;
 }
 
 .carousel-indicators button {
@@ -259,12 +262,12 @@ a.navbar-brand {
   }
 
   .carousel-item img {
-    height: 40% !important;
-    width: 50% !important;
+    height: 60vh;
+    width: 50vw;
   }
 
   .carousel-item-text {
-    margin-left: 1.6rem;
+    text-align: center;
   }
 
   .carousel-control-prev,
@@ -313,28 +316,17 @@ a.navbar-brand {
     top: 15px;
   }
 
-  .carousel-item img {
-    height: 35vh;
-    width: 50vw;
-  }
-
-  .carousel-control-next,
-  .carousel-control-prev {
-    bottom: 10% !important;
-  }
-  /* ***************** */
-
   .carousel-item-text {
-    margin-left: 1.6rem;
+    text-align: center;
   }
 
   .carousel-item img {
-    height: 35vh;
-    width: 50vw;
+    height: 60vh;
+    width: 75vw;
   }
 
   .carousel-control-prev,
   .carousel-control-next {
-    height: 82vh;
+    height: 100vh;
   }
 }
